= RubyMotion 2.21 =

  * Fixed a bug which `motion update --cache-version=X' is broken.

= RubyMotion 2.20 =

  * Improved command-line interface, e.g. `$ motion create --help' will now no
    longer create an application called ‘--help’. This deprecates the interface
    for any command plugins and this will fully be removed with RubyMotion v3.
  * Added support for loading plugins through RubyGems. Libraries that used to
    use `~/Library/RubyMotion' to load commands and/or templates should no
    longer do so, but instead add a `lib/motion_plugin.rb' file (see Joybox for
    an example). The `~/Library/RubyMotion' is from now on only meant for local
    usage, i.e. outside of the scope of a gem.
  * Added the Proc#owner method, which returns a reference to the object the
    block was created from (the `self' reference).
  * Improved Rational performance. ~4 times faster.
  * Improved Proc#new performance. 15% faster.
  * Improved performance of Range objects created with the literal syntax.
    ~80% faster.
  * Improved Object#inspect performance. ~25% faster.
  * Improved Object#!~ performance. ~3 times faster.
  * Improved Object#{send, respond_to?} performance. ~30% times faster.
  * Improved performance in dispatcher. ~25% faster.
  * Improved performance of arithmetic methods with Float objects in 32-bit.
    ~80% faster.
  * Fixed a bug where methods accepting variadic arguments would not be working
    as expected when a method of the same signature was used before.
  * Fixed a bug in the build system with Ruby 2.1 where an application whose
    name contains UTF-8 characters could not be built.
  * Fixed a race condition bug in the runtime where a crash would occur if
    the same Objective-C constant was being resolved at the same time from
    different threads.
  * Fixed the runtime to be able to deal with all tagged pointers from the
    Objective-C world. For instance, using NSTaggedManagedObjectID would lead
    to a runtime crash.