@@ -1,6 +1,8 @@
 = RubyMotion 2.21 =
 
   * Fixed a bug which `motion update --cache-version=X' is broken.
+  * Fixed a bug where vendored Xcode OS X projects were build with the
+    IPHONEOS_DEPLOYMENT_TARGET option instead of MACOSX_DEPLOYMENT_TARGET.
 
 = RubyMotion 2.20 =
 
